--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <div>
         <center>
         <form action="{{ url_for('predict')}}" method="post">
-            <h2>Predictive Analysis</h2>
+            <h2>Car Price Prediction</h2>
             
             <h3>Year</h3>
             <input id="first" name="Year" type="number">
